<resources>
    <!--  Global  -->
    <string name="app_name" translatable="false">Mesagisto</string>
    <string name="cd_picture_logo" translatable="false">@string/app_name</string>
    <string name="changes_toast_empty_required_fields">Fill in required fields</string>
    <string name="changes_toast_spaces_in_inputs">Fields must not contain spaces</string>
    <string name="changes_toast_successful_update">Data has been updated</string>
    <string name="layout_default_text_user_name">User name</string>
    <string name="layout_default_text_phone_number" translatable="false">+12345678901</string>
    <string name="layout_default_text_time" translatable="false">12:34</string>

    <!--  Registration  -->
    <string name="registration_phone_label">Enter your phone number</string>
    <string name="registration_phone_hint">Phone number</string>
    <string name="registration_title_phone_enter">Entering a phone number</string>
    <string name="registration_confirm_phone_label">Enter the code from the SMS</string>
    <string name="registration_toast_empty_phone">Enter your phone number</string>

    <!--  Chats  -->
    <string name="chat_action_menu_clear_chat">Clear chat</string>
    <string name="chat_toast_chat_cleared">The chat has been cleared</string>
    <string name="chat_action_menu_delete_chat">Delete chat</string>
    <string name="chat_toast_chat_deleted">The chat has been deleted</string>
    <string name="chat_message_empty_input">Enter your message</string>
    <string name="chat_toast_message_deleted">The message has been deleted</string>
    <string name="chat_toast_message_changed">The message has been changed</string>
    <string name="chat_input_message_hint">Message</string>
    <string name="chat_input_message_recording">Recording</string>
    <string name="chat_message_default_text">Message</string>

    <!--  Bottom Navigation  -->
    <string name="bottom_navigation_item_settings">Settings</string>
    <string name="bottom_navigation_item_main_list">Chats</string>
    <string name="bottom_navigation_item_contacts">Contacts</string>

    <!--  Settings  -->
    <string name="settings_title">Settings</string>
    <string name="settings_label_account">Account</string>
    <string name="settings_account_label_phone_number">Phone number</string>
    <string name="settings_account_label_login">Login</string>
    <string name="settings_account_additional_info">About myself</string>
    <string name="settings_account_label_additional_info">Additional Information</string>
    <string name="settings_action_menu_exit">Exit</string>
    <string name="settings_action_menu_change_fullname">Change full name</string>
    <string name="settings_action_menu_change_user_photo">Change user photo</string>
    <string name="settings_label_other">Other</string>
    <string name="settings_other_theme_switcher_text">Dark theme</string>
    <string name="settings_other_theme_switcher_sub_text">Turn on dark theme</string>
    <string name="settings_label_theme_changed">That is amazing!</string>

    <!--  Change fullname  -->
    <string name="change_fullname_title">Full name</string>
    <string name="change_fullname_enter_name_hint">Name (required)</string>
    <string name="change_fullname_enter_surname_hint">Last name (optional)</string>

    <!--  Change login  -->
    <string name="change_login_title">Login</string>
    <string name="change_login_enter_login_hint">Login (required)</string>
    <string name="change_login_toast_login_already_in_use">Login is already in use, please try another one</string>

    <!--  Change user info  -->
    <string name="change_user_info_title">About myself</string>
    <string name="change_user_info_user_info_hint">Additional information (optional)</string>

    <!--  Groups  -->
    <string name="group_settings_name_hint">Group name (required)</string>
    <string name="group_settings_label_users">A list of users</string>
    <string name="group_add_user_title">Add users</string>
    <string name="group_add_user_toast_no_users">You cannot create a group without members</string>
    <string name="group_action_menu_exit">Leave the group</string>
    <string name="group_toast_left_group">You left the group</string>
    <string name="group_settings_title">Group settings</string>
    <string name="group_settings_toast_choose_pic">Choose a picture</string>
    <string name="create_group">To create a group</string>

    <!--  Main List  -->
    <string name="main_list_last_message_image">Image</string>
    <string name="main_list_last_message_file">File</string>
    <string name="main_list_last_message_voice">A voice message</string>
    <string name="main_list_last_message_sender_me">You</string>
    <string name="main_list_last_message_no_messages">There are no messages</string>
    <string name="main_list_last_message_default_text">Last message</string>
    <string name="main_list_title">Chats</string>

    <!--  Contacts  -->
    <string name="contacts_title">Contacts</string>

    <!--  Alert Dialogs  -->
    <string name="alert_dialog_delete_message_title">Delete message</string>
    <string name="alert_dialog_delete_message_content">Are you sure you want to delete this message?</string>
    <string name="alert_dialog_button_delete">Delete</string>
    <string name="alert_dialog_button_cancel">Cancel</string>
    <string name="alert_dialog_edit_message_title">Editing a message</string>
    <string name="alert_dialog_button_save">Save</string>

</resources>