<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:icon="@drawable/ic_action_menu"
        android:title=""
        app:showAsAction="ifRoom">

        <menu>

            <item
                android:id="@+id/change_fullname"
                android:icon="@drawable/ic_change_fullname"
                android:title="@string/settings_action_menu_change_fullname"
                app:showAsAction="never" />

            <item
                android:id="@+id/change_user_photo"
                android:icon="@drawable/ic_change_photo"
                android:title="@string/settings_action_menu_change_user_photo"
                app:showAsAction="never" />

            <item
                android:id="@+id/exit"
                android:icon="@drawable/ic_exit_app"
                android:title="@string/settings_action_menu_exit"
                app:showAsAction="never" />

        </menu>

    </item>

</menu>