<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_header_height"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/settings_user_photo_circle_image_view"
            android:layout_width="@dimen/settings_user_photo_width"
            android:layout_height="@dimen/settings_user_photo_height"
            android:layout_marginStart="@dimen/margin_large"
            android:src="@drawable/ic_default_user_photo"
            style="@style/civ"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_full_name_text_view"
            style="@style/userHeaderFullname"
            app:layout_constraintBottom_toBottomOf="@+id/settings_user_photo_circle_image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/settings_user_photo_circle_image_view"
            app:layout_constraintTop_toTopOf="@+id/settings_user_photo_circle_image_view"
            tools:text="@string/layout_default_text_user_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_account_label_text_view"
        android:text="@string/settings_label_account"
        style="@style/settingsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_header_constraint_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_account_phone_number_constraint_layout"
        style="@style/userItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_account_label_text_view">

        <TextView
            android:id="@+id/settings_account_phone_number_text_view"
            style="@style/userItemButtonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/layout_default_text_phone_number" />

        <TextView
            android:id="@+id/settings_account_phone_number_label_text_view"
            style="@style/userItemButtonSubText"
            android:text="@string/settings_account_label_phone_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_account_phone_number_text_view" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_account_phone_number_label_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_account_login_constraint_layout"
        style="@style/userItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_account_phone_number_constraint_layout">

        <TextView
            android:id="@+id/settings_account_login_text_view"
            style="@style/userItemButtonText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/layout_default_text_user_name" />

        <TextView
            android:id="@+id/settings_account_login_label_text_view"
            style="@style/userItemButtonSubText"
            android:text="@string/settings_account_label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_account_login_text_view" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_account_login_label_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_account_info_constraint_layout"
        style="@style/userItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_account_login_constraint_layout">

        <TextView
            android:id="@+id/settings_account_info_text_view"
            style="@style/userItemButtonText"
            android:text="@string/settings_account_additional_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_account_info_label_text_view"
            style="@style/userItemButtonSubText"
            android:text="@string/settings_account_label_additional_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_account_info_text_view" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_account_info_label_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/settings_other_label_text_view"
        android:text="@string/settings_label_other"
        style="@style/settingsLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_account_info_constraint_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_other_theme_switcher_constraint_layout"
        style="@style/userItemButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_other_label_text_view">

        <TextView
            android:id="@+id/settings_other_theme_switcher_text_view"
            style="@style/userItemButtonText"
            android:text="@string/settings_other_theme_switcher_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/settings_other_theme_switcher_label_text_view"
            style="@style/userItemButtonSubText"
            android:text="@string/settings_other_theme_switcher_sub_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_other_theme_switcher_text_view" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settings_other_theme_switcher"
            style="@style/switcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            style="@style/separator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings_other_theme_switcher_label_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>